# q2gloombot

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  build-windows.ps1
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build.yml
config/: bot_config.cfg  bot_names_alien.txt  bot_names_human.txt  gloombot.cfg  server.cfg  skill_easy.cfg  skill_hard.cfg  skill_medium.cfg  skill_nightmare.cfg
docs/: DEVELOPMENT.md  INSTALL.md  MANUAL.md  README.md
maps/: README.txt
release/: build_release.bat  build_release.sh
src/bot/: bot.h  bot_autofill.c  bot_chat.c  bot_chat.h  bot_commands.c  bot_config.c  bot_cvars.c  bot_cvars.h  bot_debug.c  bot_debug.h  bot_humanize.c  bot_humanize.h  bot_main.c  bot_personality.c  bot_personality.h  bot_safety.h  bot_upgrade.c  bot_upgrade.h
src/bot/classes/: bot_alien_common.c  bot_class_biotech.c  bot_class_breeder.c  bot_class_builder.c  bot_class_builder_adv.c  bot_class_commando.c  bot_class_dragoon.c  bot_class_dretch.c  bot_class_drone.c  bot_class_engineer.c  bot_class_exterminator.c  bot_class_granger.c  bot_class_grunt.c  bot_class_guardian.c  bot_class_hatchling.c  bot_class_ht.c  bot_class_kamikaze.c  bot_class_marauder.c  bot_class_marine_assault.c  bot_class_marine_battle.c  bot_class_marine_elite.c  bot_class_marine_heavy.c  bot_class_marine_laser.c  bot_class_marine_light.c  bot_class_mech.c  bot_class_spiker.c  bot_class_st.c  bot_class_stalker.c  bot_class_stinger.c  bot_class_tyrant.c  bot_class_wraith.c  bot_human_common.c
src/bot/combat/: bot_combat.c  bot_combat.h
src/bot/nav/: bot_nav.c  bot_nav.h  bot_nodes.c  bot_nodes.h
src/bot/team/: bot_mapcontrol.c  bot_strategy.c  bot_strategy.h  bot_team.c  bot_team.h  bot_teamwork.c
src/game/: g_local.h  g_main.c  game.h  q_shared.c  q_shared.h
src/gloom/: gloom_classes.c  gloom_classes.h  gloom_structs.h
test/: bot_test.c
